--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,11 @@ h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 250%;
+    text-align: center;
+  }
+
+  .hero_items{
+    margin-top: -515px;
   }
   h2, h3 {
     color: #444;
@@ -12,7 +17,6 @@ h1 {
   }
   body {
     margin: 2em;
-    text-align: center;
   }
   body, input[type="text"], button {
     color: #333;
