Sharing Data Between a Child and Parent Component (Items)

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -7,3 +7,5 @@
   <span class="badge1">{{item.id}}</span> {{item.name}} | {{item.price}}
 </li>
 </ul>
+
+<app-item-detail [item]="selectedItem"></app-item-detail>
