--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -1,9 +1,6 @@
-<div class="input" *ngIf="item">
+<div *ngIf="item">
 
-    <h2>{{item.name}} Details</h2>
-    <div><span>id: </span>{{item.id}}</div>
-    <div>
-      <label for="item-name">Item name: </label>
-      <input id="item-name" [(ngModel)]="item.name" placeholder="name">
-    </div>
-  </div>
+  <h2>{{item.name}} Details</h2>
+  <div id="itemId"><span>id: </span>{{item.id}}</div>
+  <div id="itemPrice"><span>price: </span>{{item.price}}</div>    
+</div>
