--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,14 +2,23 @@
 h1 {
   margin-bottom: 0;
 }
+
+nav {
+  text-align: center;
+  margin-top: 35px;
+  margin-bottom: 50px;
+}
+
 nav a {
   padding: 1rem;
   text-decoration: none;
   margin-top: 10px;
   display: inline-block;
-  background-color: #e8e8e8;
+  background-color: #FFFFFF;
+  border: 2px solid #1A5276;
   color: #3d3d3d;
   border-radius: 4px;
+  margin: 4px;
 }
 
 nav a:hover {
