--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,8 @@
 
 h2 {
   text-align: center;
+  font-weight: bold;
+  color: #1A5276;
 }
 
 .heroes-menu {
@@ -13,8 +15,8 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-content: flex-start;
-  align-items: flex-start;
+  align-content: center;
+  align-items: center;
 }
 
 a {
