--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -2,5 +2,6 @@
 
   <h2>{{item.name}} Details</h2>
   <div id="itemId"><span>id: </span>{{item.id}}</div>
-  <div id="itemPrice"><span>price: </span>{{item.price}}</div>    
+  <div id="itemPrice"><span>price: </span>{{item.price}}</div>   
+  <button *ngIf = "!item.isAvailable" (click)="callParrentDelete()">Sell</button> 
 </div>
