Add http client for hero. Add delete and add button

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -18,4 +18,6 @@
   <div>
     <app-item-detail [item]="item" (deleteEvent)="sellItems(item)"></app-item-detail>
   </div>
+
+  <button (click)="save()">save</button>
 </div>
