--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,10 +1,23 @@
 <h2>My Items</h2>
+<app-item-search></app-item-search>
+
+
 <ul class="items">
-  <li *ngFor="let item of items" 
-    [class.selected]="item === selectedItem"
-    (click) = "onSelect(item)">
-    <span class="badge">{{item.id}}</span> {{item.name}}
+  <li *ngFor="let item of items">
+    <a routerLink="/item-detail/{{item.id}}">
+      <span class="badge">{{item.id}}</span> {{item.name}}
+    </a>
+    <button class="delete" title="delete item"
+      (click)="delete(item)">X</button>
   </li>
 </ul>
+
+<div>
+  <label for="new-item">Item name: </label>
+  <input id="new-item" #itemName />
+  <button class="add-button" (click)="add(itemName.value); itemName.value=''">
+    Add Item
+  </button>
+</div>
 
 <app-item-detail [item]="selectedItem"></app-item-detail>
