--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/items">Items</a>
 </nav>
+
 <router-outlet></router-outlet>
 <app-messages></app-messages>
+<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
