--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -11,9 +11,7 @@
 <div>
   <label for="new-hero">Hero name: </label>
   <input id="new-hero" #heroName />
-
-  <!-- (click) passes input value to add() and then clears the input -->
-  <button class="add-button" (click)="add(heroName.value); heroName.value=''">
+  <button mat-raised-button color="primary" class="add-button" (click)="add(heroName.value); heroName.value=''">
     Add hero
   </button>
 </div>
