--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -7,16 +7,15 @@
     <a routerLink="/item-detail/{{item.id}}">
       <span class="badge">{{item.id}}</span> {{item.name}}
     </a>
-    <button mat-raised-button class="delete" title="delete item"
+    <button mat-stroked-button color="accent"  class="delete" title="delete item"
     (click)="delete(item)">X</button>
   </li>
-
-</ul>
+</ul>   
 
 <div>
   <label for="new-item">Item name: </label>
   <input id="new-item" #itemName />
-  <button mat-button color="primary" class="add-button" (click)="add(itemName.value); itemName.value=''">
+  <button mat-stroked-button color="accent" class="add-button" (click)="add(itemName.value); itemName.value=''">
     Add Item
   </button>
 </div>
