--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,4 @@
 
 <router-outlet></router-outlet>
 <app-messages></app-messages>
-<mat-slider min="1" max="100" step="1" value="50"></mat-slider>
+<mat-slider style="margin-left: 50px;" min="1" max="100" step="1" value="50"></mat-slider>
