--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -15,18 +15,18 @@ h2 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-content: center;
-  align-items: center;
+  /*align-content: center;
+  align-items: center;*/
 }
 
 a {
-  background-color: #3f525c;
+  /*background-color: #3f525c;*/ 
   border-radius: 2px;
   padding: 1rem;
   font-size: 1.2rem;
   text-decoration: none;
   display: inline-block;
-  color: #fff;
+  color: #000000;
   text-align: center;
   width: 100%;
   min-width: 70px;
@@ -47,5 +47,7 @@ a {
 }
 
 a:hover {
-  background-color: #000;
+  /*background-color: #000;*/
+  font-size: 25px;
+  color: #1A5276;
 }
