--- a/src/app/item-search/item-search.component.html
+++ b/src/app/item-search/item-search.component.html
@@ -1,6 +1,6 @@
 <div id="search-component">
-    <label for="search-box">Item Search</label>
-    <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+    <label for="search-box"> </label>
+    <input matInput placeholder="Search Items" #searchBox id="search-box" (input)="search(searchBox.value)" />
 
     <ul class="search-result">
       <li *ngFor="let item of items$ | async" >
